--- a/STYLES/style0.css
+++ b/STYLES/style0.css
@@ -33,7 +33,7 @@ a {
 h1 {
     width: 100%;
     color: #000;
-    font-size: 48vw;
+    font-size: 48px;
     font-weight: 400;
     text-align: center;
     margin: 0;
@@ -41,13 +41,13 @@ h1 {
 
 .container {
     width: 100%;
-    height: 1200vh;
+    height: 1200px;
 }
 
 nav {
     position: fixed;
     top: 0;
-    padding: 1em;
+    padding: 1px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -56,8 +56,8 @@ nav {
 .wrapper-404 {
     position: absolute;
     top: 0;
-    width: 400vw;
-    height: 100vh;
+    width: 400px;
+    height: 100px;
     will-change: transform;
 }
 
@@ -91,9 +91,9 @@ nav {
 
 .outro {
     position: absolute;
-    top: 150vh;
+    top: 150px;
     width: 100%;
-    height: 100vh;
+    height: 100px;
     overflow: hidden;
     background: #eff1faeb;
     
@@ -157,11 +157,11 @@ nav {
 }
 
 .front-layer img {
-    box-shadow: 0 0 1.5em rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 1.5px rgba(0, 0, 0, 0.5);
 }
 
 .back-layer img {
-    box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.8);
+    box-shadow: 0 0 0.5px rgba(0, 0, 0, 0.8);
 }
 
 .front-layer img:nth-child(1) {
